--- a/linux/.config/bib/references.bib
+++ b/linux/.config/bib/references.bib
@@ -24,6 +24,7 @@
   ISBN =         "0-521-89787-4",
   year =         "2013",
   month =        sep,
+  DOI =          "https://doi.org/10.1017/CBO9781139034807",
 }
 
 @Book{nielsen2011,
@@ -33,6 +34,7 @@
   publisher =    "Cambridge University Press",
   ISBN =         "1-107-00217-6",
   year =         "2011",
+  DOI =          "https://doi.org/10.1017/CBO9780511976667",
 }
 
 @Book{scherer2019,
@@ -41,6 +43,7 @@
   publisher =    "Springer",
   ISBN =         "1-271-27128-1,3-030-12358-8",
   year =         "2019",
+  DOI =          "https://doi.org/10.1007/978-3-030-12358-1",
 }
 
 @Book{gaitan2008,
@@ -116,15 +119,17 @@
   ISBN =         "0-387-33597-8",
   year =         "2006",
   series =       "Advances in Mechanics and Mathematics",
+  DOI =          "https://doi.org/10.1007/978-0-387-33599-5",
 }
 
 @Book{chen1985,
   title =        "Soil Plasticity: Theory and Implementation",
-  author =       "W. F. Chen and G. Y. BALADI",
+  author =       "W. F. Chen and G. Y. Baladi",
   publisher =    "Academic Press, Elsevier",
   ISBN =         "0-444-42455-5",
   year =         "1985",
   series =       "Developments in Geotechnical Engineering 38",
+  URL =          "https://www.elsevier.com/books/soil-plasticity/chen/978-0-444-42455-6",
 }
 
 @Book{han2013,
@@ -136,13 +141,38 @@
   year =         "2013",
   series =       "Interdisciplinary Applied Mathematics 9",
   edition =      "2",
+  DOI =          "https://doi.org/10.1007/978-1-4614-5940-8",
 }
 
-@book{hill1998,
-   title =     {The mathematical theory of plasticity},
-   author =    {R. Hill},
-   publisher = {Clarendon Press; Oxford University Press},
-   isbn =      {0198503679},
-   year =      {1998},
-   series =    {Oxford engineering science series Oxford classic texts in the physical sciences 11},
+@Book{hill1998,
+  title =        "The mathematical theory of plasticity",
+  author =       "Rodney Hill",
+  publisher =    "Clarendon Press; Oxford University Press",
+  ISBN =         "0-19-850367-9",
+  year =         "1998",
+  series =       "Oxford engineering science series Oxford classic texts
+                 in the physical sciences 11",
+  URL =          "https://www.amazon.com/Mathematical-Plasticity-Classic-Physical-Sciences/dp/0198503679",
+}
+
+@Book{souza2008,
+  title =        "Computational Methods for Plasticity: Theory and
+                 Applications",
+  author =       "D. R. J. Owen {E. A. de Souza Neto, D. Peric}",
+  publisher =    "Wiley",
+  ISBN =         "0-470-69452-1",
+  year =         "2008",
+  DOI =          "https://doi.org/10.1002/9780470694626",
+}
+
+@Book{sander2021,
+  title =        "{DUNE} ― The Distributed and Unified Numerics
+                 Environment",
+  author =       "Oliver Sander",
+  publisher =    "Springer",
+  ISBN =         "3-030-59701-6",
+  year =         "2021",
+  series =       "Lecture Notes in Computational Science and
+                 Engineering, 140",
+  DOI =          "https://doi.org/10.1007/978-3-030-59702-3",
 }
