Added 3 entries to bibliography
- added @Book knuth2021
- added @Online walsh2002
- added @Online trautmann2016

--- a/linux/.config/bib/references.bib
+++ b/linux/.config/bib/references.bib
@@ -17,6 +17,31 @@
   URL =          "https://ctan.org/pkg/texbytopic",
 }
 
+@Book{knuth2021,
+  title =        "The {TEXbook}",
+  author =       "Donald E. Knuth",
+  publisher =    "Addison Wesley",
+  ISBN =         "0-201-13447-0,0-201-13448-9,0-13-749417-3",
+  year =         "2021",
+}
+
+@Online{walsh2002,
+  title =        "Making {TeX} Work",
+  author =       "Norman Walsh",
+  ISBN =         "1-56592-051-1",
+  year =         "2002",
+  month =        aug,
+  URL =          "http://makingtexwork.sourceforge.net/mtw/",
+}
+
+@Online{trautmann2016,
+  title =        "An overview of {TEX}, its children and their friends",
+  author =       "Arno Trautmann",
+  year =         "2016",
+  month =        may,
+  URL =          "https://ctan.org/tex-archive/info/tex-overview/",
+}
+
 @Book{lidar2013,
   title =        "Quantum Error Correction",
   author =       "Daniel A. Lidar and Todd A. Brun",
