Added cormen2022 to bib

--- a/linux/.config/bib/references.bib
+++ b/linux/.config/bib/references.bib
@@ -201,3 +201,14 @@
                  Engineering, 140",
   DOI =          "https://doi.org/10.1007/978-3-030-59702-3",
 }
+
+@Book{cormen2022,
+  title =        "Introduction to Algorithms",
+  author =       "Thomas H. Cormen and Charles E. Leirserson and Ronald
+                 L. Rivest and Clifford Stein",
+  publisher =    "The MIT Press",
+  ISBN =         "0-262-04630-X",
+  year =         "2022",
+  edition =      "4",
+  URL =          "https://mitpress.mit.edu/books/introduction-algorithms-fourth-edition",
+}
