Fixed typo in word "TeX"

--- a/linux/.config/bib/references.bib
+++ b/linux/.config/bib/references.bib
@@ -1,5 +1,5 @@
 @Book{abrahms2020,
-  title =        "{TEX} for the impatient",
+  title =        "{TeX} for the impatient",
   author =       "Paul W. Abrahams and Karl Berry and Kathyrn A.
                  Hargreaves and Karl Berry",
   publisher =    "Addison Wesley",
@@ -18,7 +18,7 @@
 }
 
 @Book{knuth2021,
-  title =        "The {TEXbook}",
+  title =        "The {TeXbook}",
   author =       "Donald E. Knuth",
   publisher =    "Addison Wesley",
   ISBN =         "0-201-13447-0,0-201-13448-9,0-13-749417-3",
@@ -35,7 +35,7 @@
 }
 
 @Online{trautmann2016,
-  title =        "An overview of {TEX}, its children and their friends",
+  title =        "An overview of {TeX}, its children and their friends",
   author =       "Arno Trautmann",
   year =         "2016",
   month =        may,
