Added tennent2021 to bibliography

--- a/linux/.config/bib/references.bib
+++ b/linux/.config/bib/references.bib
@@ -42,6 +42,14 @@
   URL =          "https://ctan.org/tex-archive/info/tex-overview/",
 }
 
+@Manual{tennent2021,
+  title =        "Basic Usage of tlmgr, the {TeX} Live Manager",
+  author =       "Bob Tennent",
+  month =        sep,
+  year =         "2021",
+  URL =          "https://ctan.org/pkg/tlmgrbasics",
+}
+
 @Book{lidar2013,
   title =        "Quantum Error Correction",
   author =       "Daniel A. Lidar and Todd A. Brun",
