Added olsak2022 to bibliography

--- a/linux/.config/bib/references.bib
+++ b/linux/.config/bib/references.bib
@@ -42,6 +42,14 @@
   URL =          "https://ctan.org/tex-archive/info/tex-overview/",
 }
 
+@Article{olsak2022,
+  title =        "{TeX} in a Nutshell",
+  author =       "Petr Olsak",
+  year =         "2022",
+  month =        may,
+  URL =          "https://ctan.org/pkg/tex-nutshell",
+}
+
 @Manual{tennent2021,
   title =        "Basic Usage of tlmgr, the {TeX} Live Manager",
   author =       "Bob Tennent",
