Reduced link in hill1998

--- a/linux/.config/bib/references.bib
+++ b/linux/.config/bib/references.bib
@@ -193,7 +193,7 @@
   year =         "1998",
   series =       "Oxford engineering science series Oxford classic texts
                  in the physical sciences 11",
-  URL =          "https://www.amazon.com/Mathematical-Plasticity-Classic-Physical-Sciences/dp/0198503679",
+  URL =          "https://www.amazon.com/dp/0198503679",
 }
 
 @Book{souza2008,
