Fixed author in souza2008

--- a/linux/.config/bib/references.bib
+++ b/linux/.config/bib/references.bib
@@ -199,7 +199,7 @@
 @Book{souza2008,
   title =        "Computational Methods for Plasticity: Theory and
                  Applications",
-  author =       "D. R. J. Owen {E. A. de Souza Neto, D. Peric}",
+  author =       "E. A. de Souza Neto and D. Perić and D. R. J. Owen",
   publisher =    "Wiley",
   ISBN =         "0-470-69452-1",
   year =         "2008",
