--- a/linux/.config/bib/references.bib
+++ b/linux/.config/bib/references.bib
@@ -228,3 +228,11 @@
   edition =      "4",
   URL =          "https://mitpress.mit.edu/books/introduction-algorithms-fourth-edition",
 }
+
+@Book{patrick2021,
+  title =        "Knee Ability Zero",
+  author =       "Ben Patrick",
+  publisher =    "Onyx publications LLc",
+  year = "2021",
+  URL = "https://www.amazon.com/dp/B09KNGDYGL",
+}
