--- a/linux/.config/bib/references.bib
+++ b/linux/.config/bib/references.bib
@@ -236,3 +236,10 @@
   year = "2021",
   URL = "https://www.amazon.com/dp/B09KNGDYGL",
 }
+
+@Manual{kluge2017,
+  title =        "Timewarrior cheatsheet",
+  author =       "Michael Kluge",
+  year =         "2017",
+  URL =          "https://github.com/mkluge/timewcs",
+}
