--- a/linux/.config/bib/references.bib
+++ b/linux/.config/bib/references.bib
@@ -243,3 +243,9 @@
   year =         "2017",
   URL =          "https://github.com/mkluge/timewcs",
 }
+
+@Manual{emmet,
+  title =        "Emmet cheatsheet",
+  author =       "emmet",
+  URL =          "https://docs.emmet.io/cheat-sheet/",
+}
