--- a/linux/.config/bib/references.bib
+++ b/linux/.config/bib/references.bib
@@ -249,3 +249,18 @@
   author =       "emmet",
   URL =          "https://docs.emmet.io/cheat-sheet/",
 }
+
+@Online{walsh2002,
+  title =        "How a kalman filter works, in pictures",
+  URL =          "http://www.bzarg.com/p/how-a-kalman-filter-works-in-pictures/",
+}
+
+@InCollection{harish2007,
+  title =        "Accelerating Large Graph Algorithms on the {GPU} Using
+                 {CUDA}",
+  author =       "Pawan Harish and P. J. Narayanan",
+  publisher =    "Springer Berlin Heidelberg",
+  booktitle =    "High Performance Computing {\textendash} {HiPC} 2007",
+  pages =        "197--208",
+  DOI =          "https://doi.org/10.1007/978-3-540-77220-0_21",
+}
