--- a/linux/.config/bib/references.bib
+++ b/linux/.config/bib/references.bib
@@ -264,3 +264,13 @@
   pages =        "197--208",
   DOI =          "https://doi.org/10.1007/978-3-540-77220-0_21",
 }
+
+@Book{friel2006,
+  title =        "Total heart rate training: customize and maximize your
+                 workout using a heart rate monitor",
+  author =       "Joe Friel",
+  publisher =    "Ulysses Press",
+  ISBN =         "1-56975-562-0",
+  year =         "2006",
+  URL =          "https://www.amazon.com/dp/1569755620",
+}
