Added dijkstra cuda references

--- a/.config/bib/references.bib
+++ b/.config/bib/references.bib
@@ -274,3 +274,59 @@
   year =         "2006",
   URL =          "https://www.amazon.com/dp/1569755620",
 }
+
+@InProceedings{harish2007,
+  author =       "Pawan Harish and P. J. Narayanan",
+  editor =       "Srinivas Aluru and Manish Parashar and Ramamurthy
+                 Badrinath and Viktor K. Prasanna",
+  title =        "Accelerating Large Graph Algorithms on the {GPU} Using
+                 {CUDA}",
+  booktitle =    "High Performance Computing -- {HiPC 2007}",
+  year =         "2007",
+  publisher =    "Springer Berlin Heidelberg",
+  address =      "Berlin, Heidelberg",
+  pages =        "197--208",
+  abstract =     "Large graphs involving millions of vertices are common
+                 in many practical applications and are challenging to
+                 process. Practical-time implementations using high-end
+                 computers are reported but are accessible only to a
+                 few. Graphics Processing Units (GPUs) of today have
+                 high computation power and low price. They have a
+                 restrictive programming model and are tricky to use.
+                 The G80 line of Nvidia GPUs can be treated as a SIMD
+                 processor array using the CUDA programming model. We
+                 present a few fundamental algorithms -- including
+                 breadth first search, single source shortest path, and
+                 all-pairs shortest path -- using CUDA on large graphs.
+                 We can compute the single source shortest path on a 10
+                 million vertex graph in 1.5 seconds using the Nvidia
+                 8800GTX GPU costing {\$}600. In some cases optimal
+                 sequential algorithm is not the fastest on the GPU
+                 architecture. GPUs have great potential as
+                 high-performance co-processors.",
+%ISBN =         "97-83540-772-2",
+}
+
+@InProceedings{martin2009,
+  author =       "Pedro J. Mart{\'i}n and Roberto Torres and Antonio
+                 Gavilanes",
+  editor =       "Gabrielle Allen and Jaroslaw Nabrzyski and Edward
+                 Seidel and Geert Dick van Albada and Jack Dongarra and
+                 Peter M. A. Sloot",
+  title =        "{CUDA} Solutions for the {SSSP} Problem",
+  booktitle =    "Computational Science -- {ICCS 2009}",
+  year =         "2009",
+  publisher =    "Springer Berlin Heidelberg",
+  address =      "Berlin, Heidelberg",
+  pages =        "904--913",
+  abstract =     "We present several algorithms that solve the
+                 single-source shortest-path problem using CUDA. We have
+                 run them on a database, composed of hundreds of large
+                 graphs represented by adjacency lists and adjacency
+                 matrices, achieving high speedups regarding a CPU
+                 implementation based on Fibonacci heaps. Concerning
+                 correctness, we outline why our solutions work, and
+                 show that a previous approach [10] is incorrect.",
+%ISBN="978-3-642-01970-8"
+}
+
