--- a/.config/bib/references.bib
+++ b/.config/bib/references.bib
@@ -330,3 +330,11 @@
 %ISBN="978-3-642-01970-8"
 }
 
+@Book{sutton2018,
+  title =        "Reinforcement Learning: An Introduction, 2nd Edition",
+  author =       "Andrew G Barto Richard S. Sutton",
+  publisher =    "Bradford Books",
+  year =         "2018",
+  edition =      "2",
+  URL =          "https://mitpress.mit.edu/9780262039246/reinforcement-learning/",
+}
