Added some references

--- a/.config/bib/references.bib
+++ b/.config/bib/references.bib
@@ -338,3 +338,225 @@
   edition =      "2",
   URL =          "https://mitpress.mit.edu/9780262039246/reinforcement-learning/",
 }
+
+@Article{sims2017,
+  author =       "Louie Sims",
+  year =         "2017",
+  month =        "09",
+  title =        "Speed Development - A Critical Review",
+  URL =          "https://www.researchgate.net/publication/320107786",
+}
+
+@Article{mitradjieva2013,
+  DOI =          "https://doi.org/10.1287/trsc.1120.0409",
+  title =        "The Stiff Is Moving -- Conjugate Direction Frank-Wolfe Methods with Applications to Traffic Assignment",
+  author =       "Maria Mitradjieva and Per Olov Lindberg",
+  publisher =    "INFORMS",
+  journal =      "Transportation Science",
+  ISSN =         "0041-1655,1526-5447",
+  year =         "2013",
+  volume =       "47",
+  issue =        "2",
+  pages =        "280--293",
+  URL =          "https://pubsonline.informs.org/doi/abs/10.1287/trsc.1120.0409",
+}
+
+@Article{qiang2008,
+  DOI =          "https://doi.org/10.1007/s11590-007-0049-2",
+  title =        "A unified network performance measure with importance
+                 identification and the ranking of network components",
+  author =       "Qiang Qiang; Anna Nagurney",
+  publisher =    "Springer-Verlag",
+  journal =      "Optimization Letters",
+  ISSN =         "1862-4472,1862-4480",
+  year =         "2008",
+  volume =       "2",
+  issue =        "1",
+  pages =        "127--142",
+  URL =          "https://link.springer.com/article/10.1007/s11590-007-0049-2",
+}
+
+@Article{nagurney2008,
+  DOI =          "https://doi.org/10.1007/s10898-007-9198-1",
+  title =        "A network efficiency measure with application to
+                 critical infrastructure networks",
+  author =       "Anna Nagurney; Qiang Qiang",
+  publisher =    "Springer US",
+  journal =      "Journal of Global Optimization",
+  ISSN =         "0925-5001,1573-2916",
+  year =         "2008",
+  volume =       "40",
+  issue =        "1-3",
+  pages =        "261--275",
+  URL =          "https://link.springer.com/article/10.1007/s10898-007-9198-1",
+}
+
+
+@Article{nagurney2007_1,
+  DOI =          "https://doi.org/10.1209/0295-5075/79/38005",
+  URL =          "https://iopscience.iop.org/article/10.1209/0295-5075/79/38005/meta",
+  year =         "2007",
+  month =        jul,
+  publisher =    "",
+  volume =       "79",
+  number =       "3",
+  pages =        "38005",
+  author =       "Anna Nagurney and Qiang Qiang",
+  title =        "A network efficiency measure for congested networks",
+  journal =      "Europhysics Letters",
+  abstract =     "In this paper, we propose a network efficiency measure
+                 for congested networks, that captures demands, costs,
+                 flows, and behavior. The network efficiency/performance
+                 measure can identify which network components, that is,
+                 nodes and links, have the greatest impact in terms of
+                 their removal, due to, for example, natural disasters,
+                 structural failures, terrorist attacks, etc., and,
+                 hence, are important from both vulnerability as well as
+                 security standpoints. The new measure is applied to the
+                 Braess paradox network in which the demands are varied
+                 over the horizon and explicit formulae are derived for
+                 the importance values of the network nodes and links.
+                 This measure is applicable to such congested networks
+                 as urban transportation networks and the Internet.",
+}
+
+@Article{xie2018,
+  DOI =          "https://doi.org/10.1177/0361198118774236",
+  title =        "A Greedy Path-Based Algorithm for Traffic Assignment",
+  author =       "Xie, Jun; Nie, Yu (Marco); Liu, Xiaobo",
+  publisher =    "Transportation Research Board",
+  journal =      "Transportation Research Record Journal of the
+                 Transportation Research Board",
+  ISSN =         "0361-1981",
+  year =         "2018",
+  pages =        "036119811877423",
+  URL =          "https://journals.sagepub.com/doi/abs/10.1177/0361198118774236",
+}
+
+@Article{chen2020,
+  DOI =          "https://doi.org/10.1016/j.trc.2020.102809",
+  title =        "A parallel computing approach to solve traffic
+                 assignment using path-based gradient projection
+                 algorithm",
+  author =       "Zewen {Chen, Xinyuan; Liu, Zhiyuan; Zhang, Kai;
+                 Wang}",
+  publisher =    "Elsevier Science",
+  journal =      "Transportation Research Part C: Emerging
+                 Technologies",
+  ISSN =         "0968-090X",
+  year =         "2020",
+  volume =       "120",
+  pages =        "102809",
+  URL =          "https://www.sciencedirect.com/science/article/abs/pii/S0968090X20307166",
+}
+
+@Article{fredman1987,
+  DOI =          "https://doi.org/10.1145/28869.28874",
+  title =        "Fibonacci heaps and their uses in improved network
+                 optimization algorithms",
+  author =       "Robert Endre {Fredman, Michael L.; Tarjan}",
+  publisher =    "Association for Computing Machinery",
+  journal =      "Journal of the ACM",
+  ISSN =         "0004-5411",
+  year =         "1987",
+  volume =       "34",
+  issue =        "3",
+  pages =        "596--615",
+  URL =          "https://dl.acm.org/doi/10.1145/28869.28874",
+}
+
+@article{cherkassky2009,
+ doi       = {https://doi.org/10.1145/1498698.1537602},
+ title     = {Shortest-path feasibility algorithms},
+ author    = {Cherkassky, Boris V.; Georgiadis, Loukas; Goldberg, Andrew V.; Tarjan, Robert E.; Werneck, Renato F.},
+ publisher = {Association for Computing Machinery},
+ journal   = {Journal of Experimental Algorithmics},
+ issn      = {1084-6654},
+ year      = {2009},
+ volume    = {14},
+ pages     = {2.7},
+ url       = {https://dl.acm.org/doi/10.1145/1498698.1537602}
+}
+
+
+@InBook{goldberg2006,
+  author =       "Andrew V. Goldberg and Haim Kaplan and Renato F.
+                 Werneck",
+  title =        "Reach for {A*}: Efficient
+                 Point-to-Point Shortest Path Algorithms",
+  booktitle =    "2006 Proceedings of the Workshop on Algorithm
+                 Engineering and Experiments {(ALENEX)}",
+  chapter =      "",
+  pages =        "129--143",
+  DOI =          "https://doi.org/10.1137/1.9781611972863.13",
+  year =         "2009",
+  URL =          "https://epubs.siam.org/doi/abs/10.1137/1.9781611972863.13",
+  eprint =       "https://epubs.siam.org/doi/pdf/10.1137/1.9781611972863.13",
+  abstract =     "Abstract We study the point-to-point shortest path
+                 problem in a setting where preprocessing is allowed. We
+                 improve the reach-based approach of Gutman [17] in
+                 several ways. In particular, we introduce a
+                 bidirectional version of the algorithm that uses
+                 implicit lower bounds and we add shortcut arcs to
+                 reduce vertex reaches. Our modifications greatly
+                 improve both preprocessing and query times. The
+                 resulting algorithm is as fast as the best previous
+                 method, due to Sanders and Schultes [28]. However, our
+                 algorithm is simpler and combines in a natural way with
+                 A* search, which yields significantly better query
+                 times.",
+}
+
+@Article{delling2013,
+  DOI =          "https://doi.org/10.1016/j.jpdc.2012.02.007",
+  title =        "{PHAST}: Hardware-accelerated shortest path trees",
+  author =       "Daniel Delling and Andrew V. Goldberg and Andreas
+                 Nowatzyk and Renato F. Werneck",
+  publisher =    "Elsevier Science",
+  journal =      "Journal of Parallel and Distributed Computing",
+  ISSN =         "0743-7315,1096-0848",
+  year =         "2013",
+  volume =       "73",
+  issue =        "7",
+  pages =        "940--952",
+  URL =          "https://www.sciencedirect.com/science/article/abs/pii/S074373151200041X",
+  abstract =     "We present a novel algorithm to solve the non-negative
+                 single-source shortest path problem on road networks
+                 and graphs with low highway dimension. After a quick
+                 preprocessing phase, we can compute all distances from
+                 a given source in the graph with essentially a linear
+                 sweep over all vertices. Because this sweep is
+                 independent of the source, we are able to reorder
+                 vertices in advance to exploit locality. Moreover, our
+                 algorithm takes advantage of features of modern CPU
+                 architectures, such as SSE and multiple cores. Compared
+                 to Dijkstra’s algorithm, our method needs fewer
+                 operations, has better locality, and is better able to
+                 exploit parallelism at multi-core and instruction
+                 levels. We gain additional speedup when implementing
+                 our algorithm on a GPU, where it is up to three orders
+                 of magnitude faster than Dijkstra’s algorithm on a
+                 high-end CPU. This makes applications based on
+                 all-pairs shortest-paths practical for
+                 continental-sized road networks. Several algorithms,
+                 such as computing the graph diameter, arc flags, or
+                 exact reaches, can be greatly accelerated by our
+                 method.",
+}
+
+
+@Article{delling2011,
+  DOI =          "https://doi.org/10.1524/itit.2011.0656",
+  title =        "Shortest Paths in Road Networks: From Practice to
+                 Theory and Back",
+  author =       "Daniel Delling and Andrew V. Goldberg and Renato F.
+                 Werneck",
+  publisher =    "Oldenbourg Wissenschaftsverlag",
+  journal =      "it - Information Technology",
+  ISSN =         "1611-2776,2196-7032",
+  year =         "2011",
+  volume =       "53",
+  issue =        "6",
+  pages =        "294--301",
+  URL =          "https://www.degruyter.com/document/doi/10.1524/itit.2011.0656/html",
+}
