--- a/.config/bib/references.bib
+++ b/.config/bib/references.bib
@@ -392,7 +392,7 @@
 }
 
 
-@Article{nagurney2007_1,
+@Article{nagurney2007,
   DOI =          "https://doi.org/10.1209/0295-5075/79/38005",
   URL =          "https://iopscience.iop.org/article/10.1209/0295-5075/79/38005/meta",
   year =         "2007",
@@ -559,4 +559,60 @@
   issue =        "6",
   pages =        "294--301",
   URL =          "https://www.degruyter.com/document/doi/10.1524/itit.2011.0656/html",
+}
+
+@Article{helbing1991,
+  DOI =          "https://doi.org/10.1002/bs.3830360405",
+  URL =          "https://onlinelibrary.wiley.com/doi/10.1002/bs.3830360405",
+  year =         "1991",
+  month =        oct,
+  publisher =    "Wiley",
+  volume =       "36",
+  number =       "4",
+  pages =        "298--310",
+  author =       "Dirk Helbing",
+  title =        "A mathematical model for the behavior of pedestrians",
+  journal =      "Behavioral Science",
+}
+
+@Article{helbing1998,
+  DOI =          "https://doi.org/10.48550/arXiv.cond-mat/9805213",
+  URL =          "https://arxiv.org/abs/cond-mat/9805213",
+  author =       "Dirk Helbing",
+  title =        "A Fluid Dynamic Model for the Movement of
+                 Pedestrians",
+  publisher =    "arXiv",
+  year =         "1998",
+}
+
+@Book{sheffi1985,
+  title =        "Urban Transportation Networks: Equilibrium Analysis
+                 With Mathematical Programming Methods",
+  author =       "Yosef Sheffi",
+  publisher =    "Prentice Hall",
+  ISBN =         "0-13-939729-9",
+  year =         "1985",
+  URL =          "https://sheffi.mit.edu/book/urban-transportation-networks",
+}
+
+@Book{patriksson1994,
+  title =        "The Traffic Assignment Problem - Models and Methods",
+  author =       "M. Patriksson",
+  publisher =    "V.S.P. Intl Science",
+  ISBN =         "90-6764-181-2",
+  year =         "1994",
+  series =       "Topics in Transportation Series",
+  URL =          "https://www.amazon.com/dp/0486787907",
+}
+
+@Book{krylatov2020,
+  title =        "Optimization Models and Methods for Equilibrium
+                 Traffic Assignment",
+  author =       "Tero Tuovinen {Alexander Krylatov, Victor Zakharov}",
+  publisher =    "Springer International Publishing",
+  year =         "2020",
+  series =       "Springer Tracts on Transportation and Traffic 15",
+  edition =      "1st ed. 2020",
+  URL =          "https://link.springer.com/book/10.1007/978-3-030-34102-2",
+%ISBN =          "978-3-030-34101-5,978-3-030-34102-2",
 }
