Add authors for all bib entries

--- a/.config/bib/references.bib
+++ b/.config/bib/references.bib
@@ -250,9 +250,10 @@
   URL =          "https://docs.emmet.io/cheat-sheet/",
 }
 
-@Online{walsh2002,
+@Online{babb2015,
   title =        "How a kalman filter works, in pictures",
   URL =          "http://www.bzarg.com/p/how-a-kalman-filter-works-in-pictures/",
+  author =       "Tim Babb",
 }
 
 @InCollection{harish2007,
