Added carvalho to bib

--- a/.config/bib/references.bib
+++ b/.config/bib/references.bib
@@ -617,3 +617,20 @@
   URL =          "https://link.springer.com/book/10.1007/978-3-030-34102-2",
 %ISBN =          "978-3-030-34101-5,978-3-030-34102-2",
 }
+
+@Article{carvalho2021,
+  title =        "Integrating Production Planning with Truck-Dispatching
+                 Decisions through Reinforcement Learning While Managing
+                 Uncertainty",
+  author =       "Joao Pedro {de Carvalho} and Roussos Dimitrakopoulos",
+  DOI =          "https://doi.org/10.3390/min11060587",
+  year =         "2021",
+  URL =          "https://www.mdpi.com/2075-163X/11/6/587",
+  year =         "2021",
+  month =        may,
+  publisher =    "{MDPI} {AG}",
+  volume =       "11",
+  number =       "6",
+  pages =        "587",
+  journal =      "Minerals",
+}
