bib: added grimmett1999

--- a/.config/bib/references.bib
+++ b/.config/bib/references.bib
@@ -634,3 +634,15 @@
   pages =        "587",
   journal =      "Minerals",
 }
+
+@book{grimmett1999,
+   title =     "Percolation",
+   author =    "Geoffrey Grimmett",
+   publisher = "Springer-Verlag Berlin Heidelberg",
+   isbn =      "9783540649021,3540649026",
+   year =      "1999",
+   series =    "Grundlehren der mathematischen Wissenschaften 321",
+   edition =   "2",
+   url =       "https://link.springer.com/book/10.1007/978-3-662-03981-6",
+   DOI =       "https://doi.org/10.1007/978-3-662-03981-6",
+}
