Added mnih articles

--- a/.config/bib/references.bib
+++ b/.config/bib/references.bib
@@ -646,3 +646,35 @@
    url =       "https://link.springer.com/book/10.1007/978-3-662-03981-6",
    DOI =       "https://doi.org/10.1007/978-3-662-03981-6",
 }
+
+
+@Article{mnih2015,
+  title =        "Human-level control through deep reinforcement
+                 learning",
+  author =       "Volodymyr Mnih and Koray Kavukcuoglu and David Silver
+                 and Andrei A. Rusu and Joel Veness and Marc G.
+                 Bellemare and Alex Graves and Martin Riedmiller and
+                 Andreas K. Fidjeland and Georg Ostrovski and Stig
+                 Petersen and Charles Beattie and Amir Sadik and Ioannis
+                 Antonoglou and Helen King and Dharshan Kumaran and Daan
+                 Wierstra and Shane Legg and Demis Hassabis",
+  publisher =    "Nature Publishing Group",
+  journal =      "Nature",
+  ISSN =         "0028-0836,1476-4679",
+  year =         "2015",
+  volume =       "518",
+  issue =        "7540",
+  pages =        "529--533",
+  DOI =          "https://doi.org/10.1038/nature14236",
+  URL =          "https://www.nature.com/articles/nature14236",
+}
+
+
+@Article{mnih2013,
+  title =        "Playing Atari with Deep Reinforcement Learning ",
+  author =       "Vlad Mnih, Koray Kavukcuoglu, David Silver, Alexander Graves, Ioannis Antonoglou, Daan Wierstra, Martin Riedmiller",
+  publisher =    "DeepMind",
+  journal =      "DeepMind",
+  year =         "2013",
+  URL =          "https://www.deepmind.com/publications/playing-atari-with-deep-reinforcement-learning",
+}
