Added goodfellow2016 reference

--- a/.config/bib/references.bib
+++ b/.config/bib/references.bib
@@ -647,7 +647,6 @@
    DOI =       "https://doi.org/10.1007/978-3-662-03981-6",
 }
 
-
 @Article{mnih2015,
   title =        "Human-level control through deep reinforcement
                  learning",
@@ -669,7 +668,6 @@
   URL =          "https://www.nature.com/articles/nature14236",
 }
 
-
 @Article{mnih2013,
   title =        "Playing Atari with Deep Reinforcement Learning ",
   author =       "Vlad Mnih, Koray Kavukcuoglu, David Silver, Alexander Graves, Ioannis Antonoglou, Daan Wierstra, Martin Riedmiller",
@@ -677,4 +675,12 @@
   journal =      "DeepMind",
   year =         "2013",
   URL =          "https://www.deepmind.com/publications/playing-atari-with-deep-reinforcement-learning",
+}
+
+@Book{goodfellow2016,
+  title =        "Deep Learning",
+  author =       "Ian Goodfellow and Yoshua Bengio and Aaron Courville",
+  publisher =    "MIT Press",
+  URL =          "http://www.deeplearningbook.org",
+  year =         "2016",
 }
