--- a/.config/bib/references.bib
+++ b/.config/bib/references.bib
@@ -684,3 +684,38 @@
   URL =          "http://www.deeplearningbook.org",
   year =         "2016",
 }
+
+@Book{halmos1974,
+  title =        "Measure Theory",
+  author =       "Paul R. Halmos",
+  publisher =    "Springer",
+  year =         "1974",
+  series =       "Graduate Texts in Mathematics, 18",
+  URL =          "https://link.springer.com/book/10.1007/978-1-4684-9440-2",
+  DOI =          "https://doi.org/10.1007/978-1-4684-9440-2",
+}
+
+@Book{velenik2017,
+  place =        "Cambridge",
+  title =        "Statistical Mechanics of Lattice Systems: A Concrete
+                 Mathematical Introduction",
+  ISBN =         "1-107-18482-7",
+  publisher =    "Cambridge University Press",
+  author =       "Sacha Friedli and Yvan Velenik",
+  year =         "2017",
+  DOI =          "https://doi.org/10.1017/9781316882603",
+%ISBN={978-1-107-18482-4},
+}
+
+
+@Book{schroeder2021,
+  title =        "An Introduction to Thermal Physics",
+  year =         "2021",
+  DOI =          "https://doi.org/10.1093/oso/9780192895547.001.0001",
+  title =        "An Introduction to Thermal Physics",
+  author =       "Daniel V. Schroeder",
+  publisher =    "OUP Oxford",
+  ISBN =         "0-19-289554-0",
+%isbn =      {9780192895547},
+%isbn =      {9780201380279},
+}
