Added references of measure theory

--- a/.config/bib/references.bib
+++ b/.config/bib/references.bib
@@ -719,3 +719,35 @@
 %isbn =      {9780192895547},
 %isbn =      {9780201380279},
 }
+
+@Book{fernandez2002,
+  title =        "Medida e Integração, 2a Edição",
+  author =       "Pedro J. Fernandez",
+  publisher =    "IMPA",
+  year =         "2002",
+  URL =          "https://impa.br/page-livros/medida-e-integracao/",
+}
+
+@Book{folland1999,
+  title =        "Real analysis: modern techniques and their
+                 applications",
+  author =       "Gerald B. Folland",
+  publisher =    "Wiley",
+  ISBN =         "0-471-31716-0",
+  year =         "1999",
+  series =       "PAM",
+  edition =      "2",
+  URL =          "https://www.wiley.com/en-us/Real+Analysis%3A+Modern+Techniques+and+Their+Applications%2C+2nd+Edition-p-9780471317166",
+%isbn =      {9780471317166},
+}
+
+@Book{royden2010,
+  title =        "Real Analysis",
+  author =       "Patrick Fitzpatrick Halsey Royden",
+  publisher =    "Prentice Hall",
+  ISBN =         "0-13-143747-X",
+  year =         "2010",
+  edition =      "4",
+  URL =          "https://www.amazon.com/dp/013143747X",
+%isbn =      {9780131437470},
+}
