Added athreya reference

--- a/.config/bib/references.bib
+++ b/.config/bib/references.bib
@@ -707,7 +707,6 @@
 %ISBN={978-1-107-18482-4},
 }
 
-
 @Book{schroeder2021,
   title =        "An Introduction to Thermal Physics",
   year =         "2021",
@@ -750,4 +749,15 @@
   edition =      "4",
   URL =          "https://www.amazon.com/dp/013143747X",
 %isbn =      {9780131437470},
+}
+
+@book{athreya2006,
+   title =     {Measure theory and probability theory},
+   author =    {Krishna B. Athreya and Soumendra N. Lahiri},
+   publisher = {Springer},
+   year =      {2006},
+   series =    {Springer texts in statistics},
+   doi =       {https://doi.org/10.1007/978-0-387-35434-7},
+   url =       {https://link.springer.com/book/10.1007/978-0-387-35434-7},
+   %isbn =      {9780387329031,038732903X,9780387354347,0387354344},
 }
