Added rudin and simon references

--- a/.config/bib/references.bib
+++ b/.config/bib/references.bib
@@ -761,3 +761,26 @@
    url =       {https://link.springer.com/book/10.1007/978-0-387-35434-7},
    %isbn =      {9780387329031,038732903X,9780387354347,0387354344},
 }
+
+@Book{simon20151,
+  title =        "Real Analysis: A Comprehensive Course in Analysis,
+                 Part 1",
+  author =       "Barry Simon",
+  publisher =    "AMS, American Mathematical Society",
+  ISBN =         "1-4704-1099-0",
+  year =         "2015",
+  series =       "A comprehensive course in analysis / Barry Simon ;
+                 part 1",
+  URL =          "https://bookstore.ams.org/view?ProductCode=SIMON/1",
+%isbn={978-1-4704-1099-5 },
+}
+
+@Book{rudin1987,
+  title =        "Real and complex analysis",
+  author =       "Walter Rudin",
+  year =         "1986",
+  ISBN =         "0-07-054234-1",
+  isbn13 =       "9780070542341",
+  edition =      "3",
+  URL =          "https://www.mheducation.com/highered/product/M9780070542341.html",
+}
