--- a/.config/bib/references.bib
+++ b/.config/bib/references.bib
@@ -784,3 +784,12 @@
   edition =      "3",
   URL =          "https://www.mheducation.com/highered/product/M9780070542341.html",
 }
+
+@Book{maclane1971,
+  title =        "Categories for the working mathematician",
+  author =       "Saunders Mac Lane",
+  publisher =    "Springer",
+  ISBN =         "0-387-90035-7",
+  year =         "1971",
+  URL =          "https://www.amazon.com/dp/1441931236",
+}
