--- a/.config/bib/references.bib
+++ b/.config/bib/references.bib
@@ -233,8 +233,8 @@
   title =        "Knee Ability Zero",
   author =       "Ben Patrick",
   publisher =    "Onyx publications LLc",
-  year = "2021",
-  URL = "https://www.amazon.com/dp/B09KNGDYGL",
+  year =         "2021",
+  URL =          "https://www.amazon.com/dp/B09KNGDYGL",
 }
 
 @Manual{kluge2017,
@@ -350,7 +350,8 @@
 
 @Article{mitradjieva2013,
   DOI =          "https://doi.org/10.1287/trsc.1120.0409",
-  title =        "The Stiff Is Moving -- Conjugate Direction Frank-Wolfe Methods with Applications to Traffic Assignment",
+  title =        "The Stiff Is Moving -- Conjugate Direction Frank-Wolfe
+                 Methods with Applications to Traffic Assignment",
   author =       "Maria Mitradjieva and Per Olov Lindberg",
   publisher =    "INFORMS",
   journal =      "Transportation Science",
@@ -391,7 +392,6 @@
   pages =        "261--275",
   URL =          "https://link.springer.com/article/10.1007/s10898-007-9198-1",
 }
-
 
 @Article{nagurney2007,
   DOI =          "https://doi.org/10.1209/0295-5075/79/38005",
@@ -466,25 +466,25 @@
   URL =          "https://dl.acm.org/doi/10.1145/28869.28874",
 }
 
-@article{cherkassky2009,
- doi       = {https://doi.org/10.1145/1498698.1537602},
- title     = {Shortest-path feasibility algorithms},
- author    = {Cherkassky, Boris V.; Georgiadis, Loukas; Goldberg, Andrew V.; Tarjan, Robert E.; Werneck, Renato F.},
- publisher = {Association for Computing Machinery},
- journal   = {Journal of Experimental Algorithmics},
- issn      = {1084-6654},
- year      = {2009},
- volume    = {14},
- pages     = {2.7},
- url       = {https://dl.acm.org/doi/10.1145/1498698.1537602}
+@Article{cherkassky2009,
+  DOI =          "https://doi.org/10.1145/1498698.1537602",
+  title =        "Shortest-path feasibility algorithms",
+  author =       "Renato F. {Cherkassky, Boris V.; Georgiadis, Loukas;
+                 Goldberg, Andrew V.; Tarjan, Robert E.; Werneck}",
+  publisher =    "Association for Computing Machinery",
+  journal =      "Journal of Experimental Algorithmics",
+  ISSN =         "1084-6654",
+  year =         "2009",
+  volume =       "14",
+  pages =        "2.7",
+  URL =          "https://dl.acm.org/doi/10.1145/1498698.1537602",
 }
-
 
 @InBook{goldberg2006,
   author =       "Andrew V. Goldberg and Haim Kaplan and Renato F.
                  Werneck",
-  title =        "Reach for {A*}: Efficient
-                 Point-to-Point Shortest Path Algorithms",
+  title =        "Reach for {A*}: Efficient Point-to-Point Shortest Path
+                 Algorithms",
   booktitle =    "2006 Proceedings of the Workshop on Algorithm
                  Engineering and Experiments {(ALENEX)}",
   chapter =      "",
@@ -544,7 +544,6 @@
                  exact reaches, can be greatly accelerated by our
                  method.",
 }
-
 
 @Article{delling2011,
   DOI =          "https://doi.org/10.1524/itit.2011.0656",
@@ -635,16 +634,16 @@
   journal =      "Minerals",
 }
 
-@book{grimmett1999,
-   title =     "Percolation",
-   author =    "Geoffrey Grimmett",
-   publisher = "Springer-Verlag Berlin Heidelberg",
-   isbn =      "9783540649021,3540649026",
-   year =      "1999",
-   series =    "Grundlehren der mathematischen Wissenschaften 321",
-   edition =   "2",
-   url =       "https://link.springer.com/book/10.1007/978-3-662-03981-6",
-   DOI =       "https://doi.org/10.1007/978-3-662-03981-6",
+@Book{grimmett1999,
+  title =        "Percolation",
+  author =       "Geoffrey Grimmett",
+  publisher =    "Springer-Verlag Berlin Heidelberg",
+%ISBN =         "9783-540-6490-2-1,3-540-64902-6",
+    year =       "1999",
+  series =       "Grundlehren der mathematischen Wissenschaften 321",
+  edition =      "2",
+  URL =          "https://link.springer.com/book/10.1007/978-3-662-03981-6",
+  DOI =          "https://doi.org/10.1007/978-3-662-03981-6",
 }
 
 @Article{mnih2015,
@@ -669,8 +668,10 @@
 }
 
 @Article{mnih2013,
-  title =        "Playing Atari with Deep Reinforcement Learning ",
-  author =       "Vlad Mnih, Koray Kavukcuoglu, David Silver, Alexander Graves, Ioannis Antonoglou, Daan Wierstra, Martin Riedmiller",
+  title =        "Playing Atari with Deep Reinforcement Learning",
+  author =       "Martin Riedmiller {Vlad Mnih, Koray Kavukcuoglu, David
+                 Silver, Alexander Graves, Ioannis Antonoglou, Daan
+                 Wierstra}",
   publisher =    "DeepMind",
   journal =      "DeepMind",
   year =         "2013",
@@ -751,15 +752,15 @@
 %isbn =      {9780131437470},
 }
 
-@book{athreya2006,
-   title =     {Measure theory and probability theory},
-   author =    {Krishna B. Athreya and Soumendra N. Lahiri},
-   publisher = {Springer},
-   year =      {2006},
-   series =    {Springer texts in statistics},
-   doi =       {https://doi.org/10.1007/978-0-387-35434-7},
-   url =       {https://link.springer.com/book/10.1007/978-0-387-35434-7},
-   %isbn =      {9780387329031,038732903X,9780387354347,0387354344},
+@Book{athreya2006,
+  title =        "Measure theory and probability theory",
+  author =       "Krishna B. Athreya and Soumendra N. Lahiri",
+  publisher =    "Springer",
+  year =         "2006",
+  series =       "Springer texts in statistics",
+  DOI =          "https://doi.org/10.1007/978-0-387-35434-7",
+  URL =          "https://link.springer.com/book/10.1007/978-0-387-35434-7",
+%isbn =      {9780387329031,038732903X,9780387354347,0387354344},
 }
 
 @Book{simon20151,
@@ -792,4 +793,76 @@
   ISBN =         "0-387-90035-7",
   year =         "1971",
   URL =          "https://www.amazon.com/dp/1441931236",
+}
+
+@Book{stoer2002,
+  title =        "Introduction to Numerical Analysis",
+%ISBN =         "9781-475-7559-2-3",
+      DOI =      "http://doi.org/10.1007/978-1-4757-5592-3",
+  publisher =    "Springer New York",
+  author =       "J. Stoer and R. Bulirsch",
+  year =         "2002",
+}
+
+@Book{kincaid2002,
+  title =        "Numerical Analysis - Mathematics of Scientific
+                 Computing",
+  author =       "David Kincaid and Ward Cheney",
+  year =         "2002",
+}
+
+@Book{Golub_2013,
+  title =        "Matrix Computations",
+  DOI =          "http://doi.org/10.56021/9781421407944",
+  publisher =    "Johns Hopkins University Press",
+  author =       "Gene Golub",
+  year =         "2013",
+}
+
+@Book{bausum2002,
+  title =        "{TeX} Reference Manual",
+  author =       "David Bausum",
+  publisher =    "Springer US",
+%isbn =      {978-0-7923-7673-6,978-1-4615-0941-7},
+       year =    "2002",
+  edition =      "1",
+  DOI =          "http://dx.doi.org/10.1007/978-1-4615-0941-7",
+}
+
+@Book{hogan2016,
+  title =        "tmux 2: Productive Mouse-Free Development",
+  author =       "Brian P. Hogan",
+  publisher =    "Pragmatic Bookshelf",
+%isbn =      {9781680502213},
+     year =      "2016",
+  edition =      "1",
+  URL =          "https://pragprog.com/titles/bhtmux2/tmux-2/",
+}
+
+@Book{james2023,
+  author =       "Gareth James and Daniela Witten and Trevor Hastie and
+                 Rob Tibshirani",
+  title =        "An Introduction to Statistical Learning with
+                 Applications in Python",
+  publisher =    "Springer",
+  edition =      "2",
+  year =         "2023",
+  URL =          "https://www.statlearning.com/",
+}
+
+@Book{hastie2017,
+  author =       "Trevor Hastie and Robert Tibshirani and Jerome
+                 Friedman",
+  title =        "The Element of Statistical Learning",
+  publisher =    "Springer",
+  year =         "2017",
+  URL =          "https://hastie.su.domains/ElemStatLearn/",
+}
+
+@Book{murphy2022,
+  author =       "Kevin P. Murphy",
+  title =        "Probabilistic Machine Learning: An introduction",
+  publisher =    "MIT Press",
+  year =         "2022",
+  URL =          "https://probml.ai",
 }
